--- a/src/main/java/views/VMenuCocinero.form
+++ b/src/main/java/views/VMenuCocinero.form
@@ -26,10 +26,10 @@
           <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Component id="jButton4" max="32767" attributes="0"/>
-                      <Component id="jButton1" alignment="1" max="32767" attributes="0"/>
-                      <Component id="jButton5" alignment="1" max="32767" attributes="0"/>
-                      <Component id="jButton6" alignment="0" min="-2" pref="281" max="-2" attributes="0"/>
+                      <Component id="btnPostres" max="32767" attributes="0"/>
+                      <Component id="btnEntradas" alignment="1" max="32767" attributes="0"/>
+                      <Component id="btnPrincipales" alignment="1" max="32767" attributes="0"/>
+                      <Component id="btnExtras" alignment="0" min="-2" pref="281" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
@@ -37,7 +37,8 @@
                   </Group>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jDesktopPane1" max="32767" attributes="0"/>
+              <Component id="deskPaneCocinero" max="32767" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace pref="338" max="32767" attributes="0"/>
@@ -54,17 +55,17 @@
               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="jButton5" min="-2" pref="62" max="-2" attributes="0"/>
+                      <Component id="btnPrincipales" min="-2" pref="62" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="59" max="-2" attributes="0"/>
+                      <Component id="btnEntradas" min="-2" pref="59" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton4" min="-2" pref="52" max="-2" attributes="0"/>
+                      <Component id="btnPostres" min="-2" pref="52" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jButton6" min="-2" pref="58" max="-2" attributes="0"/>
+                      <Component id="btnExtras" min="-2" pref="58" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="63" max="-2" attributes="0"/>
                       <Component id="jButton2" min="-2" pref="75" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jDesktopPane1" min="-2" max="-2" attributes="0"/>
+                  <Component id="deskPaneCocinero" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="288" max="32767" attributes="0"/>
           </Group>
@@ -80,28 +81,31 @@
         <Property name="text" type="java.lang.String" value="Cocina"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="btnEntradas">
       <Properties>
         <Property name="text" type="java.lang.String" value="Entradas"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnEntradasActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton4">
+    <Component class="javax.swing.JButton" name="btnPostres">
       <Properties>
         <Property name="text" type="java.lang.String" value="Postres"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPostresActionPerformed"/>
+      </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton5">
+    <Component class="javax.swing.JButton" name="btnPrincipales">
       <Properties>
         <Property name="text" type="java.lang.String" value="Principales"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnPrincipalesActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JButton" name="jButton6">
+    <Component class="javax.swing.JButton" name="btnExtras">
       <Properties>
         <Property name="text" type="java.lang.String" value="Extras"/>
       </Properties>
@@ -111,7 +115,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton2ActionPerformed"/>
       </Events>
     </Component>
-    <Container class="javax.swing.JDesktopPane" name="jDesktopPane1">
+    <Container class="javax.swing.JDesktopPane" name="deskPaneCocinero">
 
       <Layout>
         <DimensionLayout dim="0">
